--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
   <name>Service Fabric Plugin</name>
   <description>Plugin for deploying service fabric applications.</description>
-  <url>https://wiki.jenkins-ci.org/display/JENKINS/TODO+Plugin</url>
+  <url>https://wiki.jenkins.io/display/JENKINS/Service+Fabric+Plugin</url>
   <licenses>
     <license>
       <name>MIT License</name>
