--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <version>2.11</version>
     <relativePath/>
   </parent>
-  <groupId>org.jenkinsci.plugins</groupId>
+  <groupId>org.jenkins-ci.plugins</groupId>
   <artifactId>service-fabric</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>hpi</packaging>
