Changes in name and description

--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
   <version>1.1-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
-  <name>Service Fabric Plugin</name>
-  <description>Plugin for deploying service fabric applications.</description>
+  <name>Azure Service Fabric Plugin</name>
+  <description>Plugin for deploying service fabric applications on azure or on premises or other public clouds.</description>
   <url>https://wiki.jenkins.io/display/JENKINS/Service+Fabric+Plugin</url>
   <licenses>
     <license>
