[maven-release-plugin] prepare release service-fabric-1.1

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   </parent>
   <groupId>org.jenkins-ci.plugins</groupId>
   <artifactId>service-fabric</artifactId>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1</version>
   <packaging>hpi</packaging>
 
   <name>Azure Service Fabric Plugin</name>
@@ -36,7 +36,7 @@
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>http://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>HEAD</tag>
+    <tag>service-fabric-1.1</tag>
   </scm>
   <repositories>
     <repository>
