--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,7 @@
   ~ Licensed under the MIT License. See LICENSE in the project root for
   ~ license information.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -15,7 +14,7 @@
     <relativePath />
   </parent>
   <artifactId>service-fabric</artifactId>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.3</version>
   <packaging>hpi</packaging>
 
     <properties>
@@ -43,7 +42,7 @@
         <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
         <url>http://github.com/jenkinsci/${project.artifactId}-plugin</url>
-        <tag>HEAD</tag>
+        <tag>service-fabric-1.3</tag>
     </scm>
 
     <developers>
